Added update user profile pic functionality and also to resize the pic to lower pixels.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "/run/media/gurashishs/Stuff/Programming/virtenv/bin/python"
+    "python.pythonPath": "/run/media/gurashishs/Stuff/Programming/virtenv/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
